Fix srishti logo on mobile
Fix srishti logo on mobile

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -191,7 +191,9 @@
                 
                 img {
                     height: fit-content;
-                    max-height: 100%;
+                    max-height: fit-content;
+                    min-height: fit-content;
+                    width: 100%;
                 }
             }
 
